<resources>
    <string name="app_name">SmartScan</string>
    <string name="app_subtitle">Smart image search</string>
    <string name="search_hint">Search images by content…</string>
    <string name="search_button">Search</string>
    <string name="result_count">Found %d images</string>
    <string name="no_results">No results found</string>
    <string name="all_images">%d images saved</string>
    <string name="no_indexed_images">No images saved yet</string>
    <string name="empty_subtitle">Images will appear here after being scanned</string>
    <string name="loading">Searching…</string>
    <string name="back">Back</string>
    <string name="date_added">Date added</string>
    <string name="file_size">File size</string>
    <string name="image_dimensions">Resolution</string>
    <string name="ocr_text">OCR Text</string>
    <string name="image_description">Image description</string>
    <string name="note">Note</string>
    <string name="note_hint">Enter a note for this image</string>
    <string name="save_note">Save note</string>
    <string name="note_saved">Note saved</string>
    <string name="collections">Collections</string>
    <string name="screenshots_section">Screenshot</string>
    <string name="collection_all">All</string>
    <string name="create_collection">Create collection</string>
    <string name="collection_name_hint">Collection name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="rename_collection">Rename collection</string>
    <string name="delete_collection">Delete collection</string>
    <string name="delete_collection_confirm">Are you sure you want to delete collection \"%1$s\"?</string>
    <string name="invalid_collection_name">Invalid collection name</string>
    <string name="add_images">Add images</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="collections_of_image">Image collections</string>
    <string name="no_available_collections">No collections available</string>
    <string name="image_added_to_collection">Image added to collection</string>
    <string name="image_already_in_collection">Image already in this collection</string>
    <string name="no_images_in_collection">No images in this collection</string>
    <string name="collection_images_count">%1$s: %2$d images</string>
    <string name="uncategorized_images_count">Uncategorized: %1$d images</string>
    <string name="no_uncategorized_images">No uncategorized images</string>
    <string name="add">Add</string>
    <string name="select_images_to_add">Select images not yet in the collection to add</string>
    <string name="select_at_least_one_image">Please select at least one image</string>
    <string name="add_selected_count">Add (%1$d)</string>
    <string name="add_images_to_collection_title">Add to %1$s</string>
    <string name="search_in_collection_hint">Search in this collection…</string>
    <string name="remove_from_collection">Remove from collection</string>
    <string name="selected_count">%1$d images selected</string>
    <string name="delete_collection_keep_images_confirm">Do you want to delete this collection?</string>
    <string name="create_collection_with_plus">+ Create new collection</string>
    <string name="unknown">Unknown</string>
    <string name="page_counter">%1$d / %2$d</string>
    <string name="voice_search">Voice search</string>
    <string name="voice_note">Voice note</string>
    <string name="voice_permission_required">Microphone permission is required to use voice features</string>
    <string name="voice_listening">Listening...</string>
    <string name="voice_no_text">No voice content received</string>
    <string name="voice_not_supported">This device does not support Speech Recognition</string>
    <string name="action_call">Call</string>
    <string name="action_copy">Copy</string>
    <string name="action_open_maps">Search on Google Maps</string>
    <string name="action_add_to_calendar">Add to Calendar</string>
    <string name="action_set_reminder">Set reminder</string>
    <string name="action_reminder">Reminder</string>
    <string name="action_send_email">Send email</string>
    <string name="action_open_link">Open link</string>
    <string name="action_no_app">No app available to perform this action</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="extracted_entities">Extracted entities</string>
    <string name="create_reminder">Create reminder</string>
    <string name="reminder_title">Title</string>
    <string name="reminder_date">Date</string>
    <string name="reminder_time">Time</string>
    <string name="reminder_location">Location</string>
    <string name="reminder_set">Set reminder</string>
    <string name="reminder_created">Reminder created</string>
    <string name="reminder_empty_title">Please enter a title</string>
    <string name="reminder_empty_date">Please select a date</string>
    <string name="reminder_empty_time">Please select a time</string>
    <string name="reminder_tap_to_view">Tap to view image</string>
    <string name="reminder_fill_all_fields">Please fill in all fields</string>
    <string name="reminder_time_invalid">Time must be later than the current time</string>
    <string name="edit_reminder">Edit reminder</string>
    <string name="reminder_updated">Reminder updated</string>
    <string name="scheduled_reminders">Scheduled reminders</string>
    <string name="no_pending_reminders">No reminders yet</string>
    <string name="reminder_permission_required">Notification permission is required to receive reminders</string>
    <string name="reminder_permission_denied">Cannot create reminder without notification permission</string>
</resources>
